[gd_scene load_steps=24 format=2]

[ext_resource path="res://booing.png_5.png" type="Texture" id=1]
[ext_resource path="res://booing.png_4.png" type="Texture" id=2]
[ext_resource path="res://booing.png_3.png" type="Texture" id=3]
[ext_resource path="res://booing.png_2.png" type="Texture" id=4]
[ext_resource path="res://booing.png_1.png" type="Texture" id=5]
[ext_resource path="res://shadow.png" type="Texture" id=6]
[ext_resource path="res://Player.gd" type="Script" id=7]
[ext_resource path="res://explosion_2.png" type="Texture" id=8]
[ext_resource path="res://explosion_1.png" type="Texture" id=9]
[ext_resource path="res://explosion_3.png" type="Texture" id=10]
[ext_resource path="res://Level.tscn" type="PackedScene" id=11]
[ext_resource path="res://StartMenu.tscn" type="PackedScene" id=12]
[ext_resource path="res://theme.wav" type="AudioStream" id=13]
[ext_resource path="res://jump.wav" type="AudioStream" id=14]
[ext_resource path="res://explode.wav" type="AudioStream" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.023, 0.542 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 8 ), ExtResource( 10 ) ],
"loop": false,
"name": "DIE",
"speed": 10.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 1 ), ExtResource( 1 ) ],
"loop": true,
"name": "MOVE",
"speed": 5.0
} ]

[sub_resource type="OpenSimplexNoise" id=3]
period = 102.5
persistence = 1.0
lacunarity = 0.1

[sub_resource type="NoiseTexture" id=4]
seamless = true
noise = SubResource( 3 )

[sub_resource type="OpenSimplexNoise" id=5]

[sub_resource type="NoiseTexture" id=6]
seamless = true
as_normalmap = true
bump_strength = 14.5
noise = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://PixelOperator.ttf"

[sub_resource type="DynamicFont" id=8]
size = 22
font_data = SubResource( 7 )

[node name="Area2D" type="Area2D"]
position = Vector2( -1, 6.875 )
scale = Vector2( 0.623333, 0.76 )
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.455, -110 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="CollisionShape2D"]
position = Vector2( 0.188988, 0.273064 )
rotation = -1.5708
z_index = -1
texture = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="CollisionShape2D"]
position = Vector2( -15.6847, -0.708604 )
rotation = -1.5708
z_index = 2
frames = SubResource( 2 )
animation = "DIE"

[node name="Camera2D" type="Camera2D" parent="CollisionShape2D/AnimatedSprite"]
rotation = -4.54747e-13
offset = Vector2( 0, 15 )
zoom = Vector2( 0.2, 0.2 )
smoothing_enabled = true

[node name="Sprite2" type="Sprite" parent="CollisionShape2D"]
modulate = Color( 0.243137, 0.243137, 0.243137, 1 )
position = Vector2( 22.6931, 1.80786 )
rotation = -1.5708
z_index = -10
texture = SubResource( 4 )
normal_map = SubResource( 6 )

[node name="ScoreLabel" type="RichTextLabel" parent="CollisionShape2D"]
margin_left = -71.2252
margin_top = 153.94
margin_right = 103.775
margin_bottom = 193.94
rect_rotation = -90.016
custom_fonts/normal_font = SubResource( 8 )
text = "SCORE: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D1" parent="." instance=ExtResource( 11 )]
z_index = -3

[node name="StartMenu" parent="." instance=ExtResource( 12 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -168.614
margin_top = -104.61
margin_right = 172.386
margin_bottom = -32.6105

[node name="Camera2D2" type="Camera2D" parent="."]
position = Vector2( 1.1636, -125.685 )
rotation = -4.54748e-13
offset = Vector2( 0, 15 )
zoom = Vector2( 0.2, 0.2 )
smoothing_enabled = true

[node name="Instructions" type="RichTextLabel" parent="."]
margin_left = -11.0
margin_top = -184.0
margin_right = 176.0
margin_bottom = -107.0
custom_fonts/normal_font = SubResource( 8 )
text = "How to play:
Arrow Keys => Move
ESC => Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )

[node name="Explode" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
[connection signal="animation_finished" from="CollisionShape2D/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="CollisionShape2D/AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
